--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 .header {
   text-align: center;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
   padding: 8px;
   background-color: #F0F8FF;
   color: #2F1E5F;
@@ -31,7 +31,7 @@ form {
   width: 97%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .button {
@@ -42,6 +42,11 @@ form {
 .button:hover {
   background-color: #803FBA;
   border: transparent;
+}
+
+#list-length {
+  color:#F0F8FF;
+  text-align: center;
 }
 
 .book-card {
